# sockophil

./: .gitignore  CMakeLists.txt  README.md  VSYS Protocoll Definition.md
include/sockclient/: Client.h  ClientSelection.h  CurrentDirectoryException.h  Menu.h  NoFilenameException.h  SocketConnectionException.h  SocketCreationException.h  client.h  client_selection.h  current_directory_exception.h  menu.h  socket_connection_exception.h  socket_creation_exception.h
include/sockophil/: AccessPackage.h  ActionPackage.h  AllPackages.h  Constants.h  DataPackage.h  ErrnoException.h  ErrnoExceptions.h  ErrorPackage.h  FileInfoPackage.h  Helper.h  ListPackage.h  LoginPackage.h  Networking.h  Package.h  Protocol.h  RequestPackage.h  SocketCreationException.h  SocketReceiveException.h  SuccessPackage.h  Validator.h  constants.h  protocol.h  server.h
include/sockserver/: Server.h  SocketAcceptException.h  SocketBindException.h  SocketListenException.h  ThreadPool.h  server.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  server.cpp  sockophil.cpp
src/sockclient/: CMakeLists.txt  Client.cpp  ClientSelection.cpp  CurrentDirectoryException.cpp  Menu.cpp  NoFilenameException.cpp  SocketConnectionException.cpp  SocketCreationException.cpp  client.cpp  client_selection.cpp  current_directory_exception.cpp  menu.cpp  sockclient.cpp  socket_connection_exception.cpp  socket_creation_exception.cpp
src/sockophil/: AccessPackage.cpp  ActionPackage.cpp  CMakeLists.txt  DataPackage.cpp  ErrnoException.cpp  ErrnoExceptions.cpp  ErrorPackage.cpp  FileInfoPackage.cpp  Helper.cpp  ListPackage.cpp  LoginPackage.cpp  Networking.cpp  Package.cpp  RequestPackage.cpp  SocketCreationException.cpp  SocketReceiveException.cpp  SuccessPackage.cpp  Validator.cpp
src/sockserver/: CMakeLists.txt  Server.cpp  SocketAcceptException.cpp  SocketBindException.cpp  SocketListenException.cpp  ThreadPool.cpp  server.cpp  sockserver.cpp
test/: CMakeLists.txt
test/client_tests/: CMakeLists.txt  basic_check.cpp  client_selection_test.cpp  menu_test.cpp
test/lib_test/: CMakeLists.txt  basic_check.cpp  helper_tests.cpp
test/server_tests/: CMakeLists.txt
